refactor: 최신순 정렬 구현 리팩터링
Co-authored-by: yehyeokbang <qkddpgur318@gmail.com>